--- a/app/src/main/res/layout/layout_item1.xml
+++ b/app/src/main/res/layout/layout_item1.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:padding="5dp">
 
 
     <TextView
-        android:id="@+id/img_avatar"
+        android:id="@+id/text_avatar"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:background="@drawable/round_background"
@@ -19,8 +19,8 @@
         android:id="@+id/text_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@+id/img_avatar"
-        android:layout_alignTop="@+id/img_avatar"
+        android:layout_toRightOf="@+id/text_avatar"
+        android:layout_alignTop="@+id/text_avatar"
         android:text="hello"
         android:gravity="center"
         android:textSize="18sp"
@@ -30,18 +30,29 @@
         android:id="@+id/text_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@+id/img_avatar"
+        android:layout_toRightOf="@+id/text_avatar"
         android:layout_below="@+id/text_name"
-        android:layout_alignBottom="@+id/img_avatar"
+        android:layout_alignBottom="@+id/text_avatar"
         android:layout_marginLeft="5dp"
         android:text="abcderfghjklmnop"
-        android:textSize="14dp"/>
+        android:layout_toLeftOf="@+id/favourite"
+        android:textSize="14sp"/>
+    <TextView
+        android:id="@+id/text_time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="12:00 PM"
+        android:layout_alignParentRight="true"
+        android:textSize="16sp"/>
 
     <ImageView
         android:id="@+id/favourite"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_star"
-        android:layout_alignParentRight="true"/>
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/text_time"
+        android:layout_alignTop="@+id/text_content"
+        android:layout_alignBottom="@+id/text_content"/>
 
 </RelativeLayout>
